tests/cases/compiler/contextualTyping9/index.ts
var foo:{id:number;}[] = [{id:1}, {id:2, name:"foo"}];
//~^ ERROR: Object literal may only specify known properties, and 'name' does not exist.